[tool.poetry]
name = "dudes"
version = "0.10.0"
description = "DUDes: a top-down taxonomic profiler for metagenomics and metaproteomics"
authors = [
    "Vitor C. Piro <vitorpiro@gmail.com>",
    "Henning Schiebenhoefer <henning.schiebenhoefer@posteo.de>"
]
license = "MIT"
repository = "https://github.com/pirovc/dudes"

[tool.poetry.scripts]
dudes = "dudes.main:main"
dudesdb = "dudes.database.main:main"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.1"
numpy = "^1.21.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
